--- a/index2.3.html
+++ b/index2.3.html
@@ -79,8 +79,14 @@
                     </article>
                 </div>
             </section>
-            
         </main>
     </div>
+
+        <footer>
+            <section class="footer-right">
+                <div><p>&copy; 2025 Surya Pratap Singh Rawat. All rights reserved.</p></div>
+            </section>
+        </footer>
+    
 </body>
 </html>
