--- a/index2.3.html
+++ b/index2.3.html
@@ -20,7 +20,7 @@
         
         <nav>
             <div class=""><a href="#hero">Home</a></div>
-            <div class=""><a href="">About Me</a></div>
+            <!-- <div class=""><a href="">About Me</a></div> -->
             <div class=""><a href="#Technical_tookit">Skills</a></div>
             <div ><a href="#Programming_Profiles">Profiles</a></div>
             <div class=""><a href="">Contact</a></div>
