--- a/index2.3.html
+++ b/index2.3.html
@@ -23,7 +23,7 @@
             <!-- <div class=""><a href="">About Me</a></div> -->
             <div class=""><a href="#Technical_tookit">Skills</a></div>
             <div ><a href="#Programming_Profiles">Profiles</a></div>
-            <div class=""><a href="">Contact</a></div>
+            <div class=""><a href="https://mail.google.com/mail/?view=cm&fs=1&to=suryarawatbsns@gmail.com&su=Hello&body=I%20saw%20your%20portfolio!">Contact</a></div>
         </nav>
     </header>
 
@@ -39,7 +39,7 @@
                     <div><a class="github"  href="https://github.com/its-shadow7" target="_blank"><i class="fa-brands fa-square-github"></i></a></div>
                     <div><a class="LinkedIn"  href="https://www.linkedin.com/in/surya-pratap-singh-rawat-0bab79306?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
                     <div><a class="twitter"  href="https://youtu.be/dQw4w9WgXcQ?si=hOhAIhnxSWX1emHw" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a></div>
-                    <div><a class="twitter"  href="https://mail.google.com/mail/?view=cm&fs=1&to=suryarawatbsns@gmail.com&su=Hello&body=I%20saw%20your%20portfolio!" target="_blank"><i class="fa-solid fa-envelope"></i></a></div>
+                    <div><a class="gmail"  href="https://mail.google.com/mail/?view=cm&fs=1&to=suryarawatbsns@gmail.com&su=Hello&body=I%20saw%20your%20portfolio!" target="_blank"><i class="fa-solid fa-envelope"></i></a></div>
                 </div>
             </section>
 
