--- a/index2.3.html
+++ b/index2.3.html
@@ -52,7 +52,7 @@
                             <div>C++</div>
                             <div>Java</div>
                             <div>Python</div>
-                            <div>Data Structures</div>
+                            <div>MySQL</div>
                             <div>Algorithms</div>
                             <div>Dynamic Programming</div>
                             <div>Graphs</div>
@@ -90,3 +90,4 @@
     
 </body>
 </html>
+
